--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -18,8 +18,33 @@
     display: grid;
     grid-template-columns: repeat(3, 352px);
     column-gap: 32px;
-    grid-template-rows: repeat(4, 454px);
+    grid-template-rows: repeat(1, 454px);
     row-gap: 48px;
+}
+
+.pagination-wrap {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.pagination-but {
+    width: 67px;
+    height: 26px;
+    background-color: transparent;
+    border: none;
+    color: #313037;
+    font-family: 'Inter Regular';
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+.pagination-but:hover {
+    font-size: 20px;
 }
 
 @font-face {
