--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -125,6 +125,48 @@
     font-size: 30px;
 }
 
+.cart_footer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.cart_footer-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 256px;
+    height: 228.46px;
+}
+
+.cart_footer-data-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.cart_footer-data {
+    color: #313037;
+    font-family: 'BebasNeue';
+    font-size: 40px;
+    line-height: 60px;
+    font-weight: 700;
+}
+
+.checkout-but {
+    width: 100%;
+    height: 56px;
+    background-color: #313037;
+    color: #FFFFFF;
+    font-family: 'BebasNeue';
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 700;
+    border-radius: 0;
+    letter-spacing: 1.5px;
+}
+
 @font-face {
     font-family: "BebasNeue";
     src: url("./../../fonts/BebasNeue-Regular.ttf") format("truetype");
